04-kubernetes/13-despliegue-ms-aws/order-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-ms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-ms-app
  template:
    metadata:
      labels:
        app: orders-ms-app
    spec:
      containers:
        - name: container
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/img-orders-ms
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orders-ms-app
spec:
  type: ClusterIP
  selector:
    app: orders-ms-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
