04-kubernetes/13-despliegue-ms-aws/payment-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-ms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-ms-app
  template:
    metadata:
      labels:
        app: payments-ms-app
    spec:
      containers:
        - name: container
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/img-payments-ms
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: payments-ms-app
spec:
  type: ClusterIP
  selector:
    app: payments-ms-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
