04-kubernetes/13-despliegue-ms-aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ms06"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: "rabbitmq"
                port:
                  number: 15672
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "gateway-app"
                port:
                  number: 80
